Viết thêm các test